fix(path): unblock navigation after large snapshots